[tool.poetry]
name = "user-management"
version = "0.1.0"
description = ""
authors = ["Apsar, Shaik <shaik.apsar@hotmail.com>"]
readme = "README.md"
packages = [{include = "user_management"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
